RESOLVED FIXED75972
REGRESSION (r102024): Having the Bing homepage open prevents idle sleep
https://bugs.webkit.org/show_bug.cgi?id=75972
Summary REGRESSION (r102024): Having the Bing homepage open prevents idle sleep
Jer Noble
Reported 2012-01-10 10:53:50 PST
REGRESSION (r102024): Having the Bing homepage open prevents idle sleep
Attachments
Patch (3.82 KB, patch)
2012-01-10 12:09 PST, Jer Noble
oliver: review+
Jer Noble
Comment 1 2012-01-10 10:54:27 PST
Jer Noble
Comment 2 2012-01-10 10:55:30 PST
Bing will use a looping <video> element to animate a portion of their homepage. On Mac platforms, this causes the system to disable idle and display sleep.
Jer Noble
Comment 3 2012-01-10 12:09:29 PST
Jer Noble
Comment 4 2012-01-10 12:43:32 PST
Darin Adler
Comment 5 2012-01-10 22:22:30 PST
I think it would be better to cut down on ifdefs by having an inline empty implementation of updateDisableSleep() in the header.
Note You need to log in before you can comment on or make changes to this bug.