REGRESSION (r102024): Having the Bing homepage open prevents idle sleep https://bugs.webkit.org/show_bug.cgi?id=75972

Reviewed by Oliver Hunt.

No new tests; no testing infrastructure exists to test display sleep assertions.

Only disable idle and display sleep when a video element is not paused, not looping, and
has both a video and audio track.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRateChanged): Factor into updateDisableSleep() and
    shouldDisplaySleep().
(WebCore::HTMLMediaElement::setLoop): Ditto.
(WebCore::HTMLMediaElement::attributeChanged): Ditto.
(WebCore::HTMLMediaElement::updateDisableSleep):
(WebCore::HTMLMediaElement::shouldDisableSleep):
* html/HTMLMediaElement.h:

Canonical link: https://commits.webkit.org/92796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104619 268f45cc-cd09-0410-ab3c-d52691b4dbfc