Source/WebCore/html/HTMLMediaElement.cpp
@@ -326,6 +326,10 @@ void HTMLMediaElement::attributeChanged(Attribute* attr, bool preserveDecls)
             scheduleLoad(MediaResource);
     } else if (attrName == controlsAttr)
         configureMediaControls();
+#if PLATFORM(MAC)
+    else if (attrName == loopAttr)
+        updateDisableSleep();
+#endif
 }
 
 void HTMLMediaElement::parseMappedAttribute(Attribute* attr)
@@ -2006,6 +2010,9 @@ void HTMLMediaElement::setLoop(bool b)
 {
     LOG(Media, "HTMLMediaElement::setLoop(%s)", boolString(b));
     setBooleanAttribute(loopAttr, b);
+#if PLATFORM(MAC)
+    updateDisableSleep();
+#endif
 }
 
 bool HTMLMediaElement::controls() const
@@ -2737,10 +2744,7 @@ void HTMLMediaElement::mediaPlayerRateChanged(MediaPlayer*)
         invalidateCachedTime();
 
 #if PLATFORM(MAC)
-    if (m_player->paused() && m_sleepDisabler)
-        m_sleepDisabler = nullptr;
-    else if (!m_player->paused() && !m_sleepDisabler)
-        m_sleepDisabler = DisplaySleepDisabler::create("com.apple.WebCore: HTMLMediaElement playback");
+    updateDisableSleep();
 #endif
 
     endProcessingMediaPlayerCallback();
@@ -3735,6 +3739,21 @@ void HTMLMediaElement::applyMediaFragmentURI()
         seek(m_fragmentStartTime, ignoredException);
     }
 }
+
+#if PLATFORM(MAC)
+void HTMLMediaElement::updateDisableSleep()
+{
+    if (!shouldDisableSleep() && m_sleepDisabler)
+        m_sleepDisabler = nullptr;
+    else if (shouldDisableSleep() && !m_sleepDisabler)
+        m_sleepDisabler = DisplaySleepDisabler::create("com.apple.WebCore: HTMLMediaElement playback");
+}
+
+bool HTMLMediaElement::shouldDisableSleep() const
+{
+    return !m_player->paused() && hasVideo() && hasAudio() && !loop();
+}
+#endif
 
 }
 
